--- a/rust/datafusion/Cargo.toml
+++ b/rust/datafusion/Cargo.toml
@@ -51,7 +51,7 @@ unicode_expressions = ["unicode-segmentation"]
 ahash = "0.7"
 hashbrown = "0.11"
 arrow = { path = "../arrow", version = "4.0.0-SNAPSHOT", features = ["prettyprint"] }
-parquet = { path = "../parquet", version = "4.0.0-SNAPSHOT", features = ["arrow"] }
+parquet = { path = "../parquet", version = "4.0.0-SNAPSHOT", default-features = false, features = ["arrow", "base64"] }
 sqlparser = "0.8.0"
 clap = "2.33"
 rustyline = {version = "7.0", optional = true}
